--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1999,13 +1999,13 @@ input, select, textarea {
 		}
 
 		.wrapper.style2 {
-			background-color: #fafafa;
+			background-color: rgb(233, 233, 233);
 			text-shadow: 1px 1px 0px #fff;
 		}
 
 		.wrapper.style3 {
-			background-color: #ffffff;
-			text-shadow: 1px 1px 0px rgb(184, 96, 96);
+			background-color: #fff;
+			text-shadow: 1px 1px 0px rgb(0, 0, 0);
 		}
 
 		.wrapper.style4 {
