--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2443,19 +2443,13 @@ input, select, textarea {
 					}
 
 	}
-	/* Dropdown Button */
+/* Dropdown Button */
 .dropbtn {
-	background-color: #3498DB;
+	background-color: #04AA6D;
 	color: white;
 	padding: 16px;
 	font-size: 16px;
 	border: none;
-	cursor: pointer;
-  }
-  
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-	background-color: #2980B9;
   }
   
   /* The container <div> - needed to position the dropdown content */
@@ -2485,5 +2479,8 @@ input, select, textarea {
   /* Change color of dropdown links on hover */
   .dropdown-content a:hover {background-color: #ddd;}
   
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}	
