--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2445,7 +2445,7 @@ input, select, textarea {
 	}
 /* Dropdown Button */
 .dropbtn {
-	background-color: #04AA6D;
+	background-color: #62c92e;
 	color: white;
 	padding: 16px;
 	font-size: 16px;
